--- a/downloader/.env
+++ b/downloader/.env
@@ -1,2 +1,2 @@
-MAPILLARY_TOKEN=MLY|YOUR|TOKEN #change it here
-AREA_DISTANCE=0.0005
+MAPILLARY_TOKEN=MLY|9870245706319301|60d6f9ee494800ccc428b60e7a3627d8
+AREA_DISTANCE=0.001
