Changed augmentation and splitting script, updated README and data.yaml

--- a/training/data.yaml
+++ b/training/data.yaml
@@ -1,8 +1,8 @@
 train: ../dataset/train
 val: ../dataset/val
-test: ../dataset/test
+# test: ../dataset/test
 
-nc: 87
+nc: 86
 names:
   0: "A-1"
   1: "A-2"
@@ -70,24 +70,23 @@ names:
   63: "D-40"
   64: "D-42"
   65: "D-43"
-  66: "D-44"
-  67: "D-45"
-  68: "D-46/52"
-  69: "D-50"
-  70: "F-5/6"
-  71: "F-7"
-  72: "F-10"
-  73: "F-11"
-  74: "F-14"
-  75: "DETOUR"
-  76: "G-1"
-  77: "G-2"
-  78: "G-3/4"
-  79: "P-8a"
-  80: "P-8b"
-  81: "P-8d"
-  82: "P-8e"
-  83: "P-8f"
-  84: "P-8i"
-  85: "P-9a"
-  86: "P-9b"
+  66: "D-45"
+  67: "D-46/52"
+  68: "D-50"
+  69: "F-5/6"
+  70: "F-7"
+  71: "F-10"
+  72: "F-11"
+  73: "F-14"
+  74: "DETOUR"
+  75: "G-1"
+  76: "G-2"
+  77: "G-3/4"
+  78: "P-8a"
+  79: "P-8b"
+  80: "P-8d"
+  81: "P-8e"
+  82: "P-8f"
+  83: "P-8i"
+  84: "P-9a"
+  85: "P-9b"
